# ndithering

./: .gitignore  .gitmodules  meson.build  readme.md
ndithering/: main.cpp
